# medstudy

./: .dockerignore  .env.sample  .gitignore  .repomixignore  Dockerfile  Procfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
frontend/: package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  typed-router.d.ts  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/global/: NavBar.vue
frontend/src/pages/: explore.vue  index.vue  login.vue
frontend/src/pages/app/: index.vue  my-data.vue
frontend/src/pages/community/: index.vue  new.vue
frontend/src/pages/protocols/: index.vue
frontend/src/pages/unstudies/: new.vue
frontend/src/pages/unstudies/[id]/: index.vue  join.vue
nwo/: api.py  asgi.py  celery_worker.py  settings.py  urls.py  wsgi.py
scripts/: start_celery.sh  start_server.sh
src/common/: choices.py  domains.py  model_service.py  slack.py  throttling.py  utils.py  views.py
src/common/api/: renderers.py  schemas.py
src/common/validators/: email.py
src/users/: adapters.py  apps.py  auth.py  backends.py  domains.py  exceptions.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
src/users/management/commands/: create_seed_data.py
src/utils/: constants.py  models.py  views.py
src/utils/domains/: file.py
src/utils/services/: files.py
tests/: utils.py
tests/backend/: conftest.py
tests/backend/software_requests/: test_proposal_responses.py  test_proposals.py  test_requests.py
tests/backend/staff/: test_staff_vendors.py
tests/backend/users/: test_users.py
tests/backend/vendors/: test_api.py
tests/factories/: crm_data.py  request.py  user.py  util.py  vendor.py
